force-app/main/default/objects/SalesOrganization__c/SalesOrganization__c.object-meta.xml
<CustomObject>
    <description>Represents Sales Orgnaization information, typically derived from an ERP</description>
    <label>Sales Organization</label>
    <nameField>
        <label>Sales Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>