force-app/main/default/objects/SalesOrganization__c/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryCode</valueSetName>
    </valueSet>
</CustomField>