force-app/main/default/objects/SalesOrganization__c/fields/SalesOrganizationName__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationName__c</fullName>
    <description>The selectable picklist to name the Sales Organization</description>
    <label>Sales Organization Name (picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrganization</valueSetName>
    </valueSet>
</CustomField>