force-app/main/default/objects/SalesOrganization__c/fields/TimeSheetGeneration__c.field-meta.xml
<CustomField>
    <fullName>TimeSheetGeneration__c</fullName>
    <description>Defines how shall Time Sheets be generated for a Service Resource who belongs to this Sales Org.</description>
    <label>Time Sheet Generation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeSheetGeneration</valueSetName>
    </valueSet>
</CustomField>