force-app/main/default/objects/SalesOrganization__c/listViews/detailed.listView-meta.xml
<ListView>
    <fullName>detailed</fullName>
    <columns>NAME</columns>
    <columns>TimeSheetGeneration__c</columns>
    <columns>SalesOrganizationName__c</columns>
    <filterScope>Mine</filterScope>
    <label>detailed</label>
</ListView>